# SPDX-FileCopyrightText: 2022 Agathe Porte <microjoe@microjoe.org>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "debcontrol-struct-with-oma-decontrol"
version = "0.3.1"
authors = ["Agathe Porte <microjoe@microjoe.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Automatic Debian control file parsing for structs."
readme = "README.md"
keywords = ["deb", "debian", "control", "dpkg"]
categories = ["parser-implementations"]
repository = "https://github.com/eatradish/debcontrol_struct"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debcontrol = { version = "0.3", package = "oma-debcontrol" }
debcontrol_struct_derive = { version = "0.3.1", optional = true, path = "../debcontrol_struct_derive" }

[dev-dependencies]
debcontrol_struct_derive = { version = "0.3.1", path = "../debcontrol_struct_derive" }

[features]
default = ["derive"]
derive = ["debcontrol_struct_derive"]
